; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_g_game.c_G_DeferedInitNew.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_g_game.c_G_DeferedInitNew.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@d_skill = common dso_local global i32 0, align 4
@d_episode = common dso_local global i32 0, align 4
@d_map = common dso_local global i32 0, align 4
@ga_newgame = common dso_local global i32 0, align 4
@gameaction = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @G_DeferedInitNew(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  store i32 %7, i32* @d_skill, align 4
  %8 = load i32, i32* %5, align 4
  store i32 %8, i32* @d_episode, align 4
  %9 = load i32, i32* %6, align 4
  store i32 %9, i32* @d_map, align 4
  %10 = load i32, i32* @ga_newgame, align 4
  store i32 %10, i32* @gameaction, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
